feat(bank-accounts): implement delete user bank account & fix(users): fix user mongoose schema & feat(error-handler): implement zod error validation & feat(db-indexes): implement script to create db indexes
