# docs/jsons/API_Documentation_1.0.0.swagger.json
@@ -44,6 +44,23 @@
             "description": "Returns an error for: user bank account not found."
           }
         }
+      },
+      "delete": {
+        "tags": [
+          "Accounts"
+        ],
+        "description": "deletes a user bank account on database.",
+        "responses": {
+          "200": {
+            "description": "Returns success for deleting user bank account."
+          },
+          "401": {
+            "description": "Returns an error for: user invalid credentials or token not provided/invalid."
+          },
+          "404": {
+            "description": "Returns an error for: user bank account not found."
+          }
+        }
       }
     },
     "/accounts/:id/increment": {
